(08/28/07)

*** Added throttle.score.job.factor to swift.properties (the functionality
    was previously available by manually hacking scheduler.xml)
    
*** Throttle options now accept "off" as a valid value

*** Put @arg back in

*** Changes the configuration to allow loading a specific file even
    if the defaults cannot be found.
    
*** Added PBS and dCache providers as dependencies

(08/23/07)

*** A few changes to the way types work. Whether something is an array
    or not is part of the type now.
    
*** Cleanups to the way things get stored and mappers

*** It's not necessary to manually add task handlers any more. All the
    available ones are added automatically

(08/16/07)

*** A different site catalog element <execution> that fills a similar role
    to the existing <jobmanager> element with a syntax more sympathetic to
    submitting via non-GRAM submission systems.

(07/31/07)

*** Prototype structured_regexp_mapper for performing a regexp transformation
    on the filenames of one dataset to produce another dataset with the
    same structure but different leaf filenames.

(07/30/07)

*** All simple types are now passed around inside of DSHandle objects,
    instead of sometimes inside DSHandles and sometimes as rawer Java
    objects.

*** Swift operators now implemented in their own class, rather than using
    the Karajan implementation.

*** There are now two division operators, / and %/ of which the first (/)
    returns a floating point value and %/ returns an integer value.
    The mod operator is relabelled %% instead of %.
    
*** Mappers can now map files on remote sites (use protocol://host/path)
    for file name(s), and the engine can actually stage things in and out
    from/to arbitrary locations
    
*** Moved some path manipulation function to Java

(07/29/07)

*** Use /dev/urandom by default on UNIX platforms to avoid large
    delays at start-up (and Yoya knows when else). It will lower the